--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,4 @@ deps =
     -rrequirements.txt
 commands = 
     pip install -e .
-    py.test --cov alexandriadocs_cli {posargs}
+    py.test --cov --cov-report xml alexandriadocs_cli {posargs}
