--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist=True
-envlist = {py27,py34,py35,py36}
+envlist = {py27,py34,py35,py36},flake8
 
 [testenv]
 deps =
@@ -8,3 +8,11 @@ deps =
 commands = 
     pip install -e .
     py.test --cov --cov-report xml alexandriadocs_cli {posargs}
+
+[testenv:flake8]
+deps = flake8
+commands = flake8 alexandriadocs_cli
+
+[testenv:isort]
+deps = isort
+commands = isort -rc alexandriadocs_cli
